<resources>
    <string name="app_name">NotesApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_note">Create Note</string>
    <string name="write_title_here">Write title here</string>
    <string name="note_content_hint">Write your note here</string>
    <string name="save_button">Save</string>
    <string name="create_button">Create</string>
    <string name="my_notes_title">My Notes</string>
    <string name="empty_title">Please click <b>Create</b> button to add note</string>
    <string name="save_snackbar_text">You cannot save note without title. Please add title</string>
    <string name="delete_snackbar_text">Note deleted successfully</string>
</resources>