<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#a2a2c8"
    android:paddingHorizontal="16dp"
    tools:context=".presentation.createnote.view.CreateNoteFragment">

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:paddingHorizontal="12dp"
        app:layout_constraintBottom_toTopOf="@+id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/create_note"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:layout_marginTop="40dp"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backButton" />


    <EditText
        android:id="@+id/noteTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/roundy_background"
        android:ems="10"
        android:hint="@string/write_title_here"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:singleLine="true"
        android:textColorHint="#c8a2a2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />


    <EditText
        android:id="@+id/noteContent"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/roundy_background"
        android:ems="10"
        android:hint="@string/note_content_hint"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:padding="12dp"
        android:textColorHint="#c8a2a2"
        android:singleLine="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noteTitle" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/saveNote"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:background="@drawable/roundy_background"
        android:backgroundTint="#c8a2a2"
        android:paddingHorizontal="8dp"
        android:text="@string/save_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>